--- a/bitrise.yml
+++ b/bitrise.yml
@@ -3,6 +3,13 @@ format_version: '11'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: react-native
 workflows:
+  checkNode:
+    description: |
+      Checking node version
+    steps:
+    - nodeversion@0:
+      title: 'Node Version'
+      - command: node --version
   deploy:
     description: |
       Tests, builds and deploys the app using *Deploy to bitrise.io* Step.
