--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -221,6 +221,8 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            applicationIdSuffix ".dev"
+            matchingFallbacks = ['debug', 'release']
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -228,6 +230,12 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+        }
+        qa {
+            initWith debug
+            signingConfig signingConfigs.debug
+            applicationIdSuffix ".qa"
+            matchingFallbacks = ['debug', 'release']
         }
     }
 
