--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "pokedex",
   "version": "0.0.1",
-  "build": "1",
-  "relaseDate": "09/09/22",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "android:qa": "react-native run-android --variant releaseqa --appIdSuffix qa"
   },
   "dependencies": {
     "react": "18.1.0",
