--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "pokedex",
-  "version": "0.0.1",
+  "version": "3.1.2",
+  "build": "1",
+  "releaseDate": "01/01/2000",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
